# vertex-ai-predict-sample

./: .coderabbit.yaml  LICENSE  README.md  main.py  predict.py  pyproject.toml
.github/: pr-labeler.yml  release-drafter.yml
