[tool.poetry]
name = "vertex-ai-predict-sample"
version = "0.1.0"
description = ""
authors = ["kacky <t_kaki@nextappli.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-aiplatform = "^1.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
